[GOHW-8]: Alpha
