# loms/api/openapiv2/loms.swagger.json
@@ -117,6 +117,28 @@
         ]
       }
     },
+    "/order/info/all": {
+      "get": {
+        "operationId": "Loms_OrderInfoAll",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/lomsOrderInfoAllResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "Loms"
+        ]
+      }
+    },
     "/order/pay": {
       "post": {
         "operationId": "Loms_OrderPay",
@@ -201,13 +223,17 @@
         "orderId": {
           "type": "string",
           "format": "int64"
+        },
+        "userId": {
+          "type": "string",
+          "format": "int64"
         }
       }
     },
     "lomsOrderCreateRequest": {
       "type": "object",
       "properties": {
-        "user": {
+        "userId": {
           "type": "string",
           "format": "int64"
         },
@@ -226,6 +252,22 @@
         "orderId": {
           "type": "string",
           "format": "int64"
+        },
+        "userId": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
+    "lomsOrderInfoAllResponse": {
+      "type": "object",
+      "properties": {
+        "items": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/lomsOrderInfoResponse"
+          }
         }
       }
     },
@@ -233,6 +275,10 @@
       "type": "object",
       "properties": {
         "orderId": {
+          "type": "string",
+          "format": "int64"
+        },
+        "userId": {
           "type": "string",
           "format": "int64"
         }
@@ -291,6 +337,10 @@
       "type": "object",
       "properties": {
         "orderId": {
+          "type": "string",
+          "format": "int64"
+        },
+        "userId": {
           "type": "string",
           "format": "int64"
         }
